# tarot

./: .gitignore  README.md  package.json  selfmade.py  tarotexplain.txt  tarotinfo.txt  tarotlist.txt  tarotmain.py  tarotmenu.py  tarotposition.txt  test_selfmade.py
.github/: README.md
.github/workflows/: app-ci.yaml  static.yml
app/: main.py  selfmade.py  tarotmain.py  tarotmenu.py  utils.py
docs/: asset-manifest.json  index.html
docs/static/js/: main.36537ff8.js  main.36537ff8.js.map  main.68a4c887.js  main.68a4c887.js.map
public/: index.html
python/: README.md  pyproject.toml
react/: 404.html  README.md  package.json
react-app/: .eslintrc.js  .prettierrc.json  package-lock.json  package.json
react-app/src/: App.tsx
react-app/src/components/: test.tsx
react-app/src/components/atoms/: CardNumberChanger.tsx  DeckOrder.tsx
react-app/src/components/molecules/: DeckShuffle.tsx
react-app/src/components/organisms/: Header.tsx
react-app/src/components/pages/: Home.tsx
react/src/: App.tsx
react/src/components/atoms/: CardNumberChanger.tsx  DeckOrder.tsx  DeckPosition.tsx
react/src/components/molecules/: TarotCardImageViewer.tsx
react/src/components/organisms/: Header.tsx
react/src/components/pages/: Gallery.tsx
src/: App.tsx
src/components/atoms/: CardNumberChanger.tsx  DeckPosition.tsx  TarotInfomation.tsx
src/components/molecules/: DeckShuffle.tsx  TarotCardImageViewer.tsx
src/components/organisms/: Header.tsx
src/components/pages/: Gallery.tsx  Home.tsx
tests/: test_selfmade.py
(+2 files in other folders)
